deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-axa
  labels:
    # Pod Security Standards : profil « restricted » imposé sur tout le namespace.
    pod-security.kubernetes.io/enforce: restricted
